# hecate

./: .gitignore  .pre-commit-config.yaml  BACKPRESSURE_ARCHITECTURE.md  README.md  constants.py  demo.py  models.py  prefect.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: auto-pr-epoch-updates.yml
client/: __init__.py  base.py  client.py  multi_source_balancer.py
client/chainsync/: __init__.py  find_intersection.py  next_block.py
client/ledgerstate/: __init__.py  epoch.py  era_summaries.py  tip.py
config/: __init__.py  settings.py
data/: epoch_blocks.csv  epoch_boundaries.csv
flows/: README.md  __init__.py  adaptive_memory_controller.py  checkpoint.json  historical.py  periodic.py  stream_cleanup.py
monitoring/: __init__.py  metrics_agent.py  metrics_collector.py
network/: __init__.py  connection_manager.py  connection_strategy.py  endpoint_scout.py
sinks/: __init__.py  adaptive_memory_controller.py  backpressure_monitor.py  base.py  cli.py  metrics.py  redis.py  stream_cleanup.py
sinks/memory_management/: __init__.py  batch_adaptor.py  controller.py  memory.py  process_control.py
